add opg meta tags

--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="The website of the Little Lemon Restaurant, a family run 
+    Mediterranean restaurant located in Chicago, Illinois. Please come 
+    and enjoy our wide selection of authentic Mediterranean cuisine!" />
+  <meta name="og:title" content="Little Lemon Restaurant" />
+  <meta name="og:site_name" content="Little Lemon Restaurant" />
+  <meta property="og:type" content="website" />
+  <meta name="og:description" content="The website of the Little Lemon Restaurant, a family run 
+    Mediterranean restaurant located in Chicago, Illinois. Please come 
+    and enjoy our wide selection of authentic Mediterranean cuisine!" />
+  <title>Little Lemon Restaurant</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
