add navbar icons hamburger menu and close menu and a state to toggle between them

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta name="og:description" content="The website of the Little Lemon Restaurant, a family run 
     Mediterranean restaurant located in Chicago, Illinois. Please come 
     and enjoy our wide selection of authentic Mediterranean cuisine!" />
+    <meta name="author" content="omar naboush" />
   <title>Little Lemon Restaurant</title>
 </head>
 
